--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
             <img src="assets/cadastro2.png" alt="cadastro2" />
           </div>
           <br>
-          <a href="https://youtu.be/SEUVIDEO" target="_blank"><button>Ver Vídeo Demonstrativo</button></a>
+          <a href="https://youtu.be/watch?v=JbMRTClWuxs" target="_blank"><button>Ver Vídeo Demonstrativo</button></a>
         </div>
       </div>
 
@@ -199,7 +199,7 @@
             <img src="assets/tacografo2.png" alt="tacografo2" />
           </div>
           <br>
-          <a href="https://youtu.be/SEUVIDEO" target="_blank"><button>Ver Vídeo Demonstrativo</button></a>
+          <a href="https://youtu.be/watch?v=zbnxXJSftBI" target="_blank"><button>Ver Vídeo Demonstrativo</button></a>
         </div>
       </div>
 
@@ -215,7 +215,7 @@
             <img src="assets/preview-nfe2.png" alt="nfe2" />
           </div>
           <br>
-          <a href="https://youtu.be/SEUVIDEO" target="_blank"><button>Ver Vídeo Demonstrativo</button></a>
+          <a href="https://youtu.be/watch?v=4_g6FnebqLk" target="_blank"><button>Ver Vídeo Demonstrativo</button></a>
         </div>
       </div>
 
@@ -231,7 +231,7 @@
             <img src="assets/banco2.png" alt="banco2" />
           </div>
           <br>
-          <a href="https://youtu.be/SEUVIDEO" target="_blank"><button>Ver Vídeo Demonstrativo</button></a>
+          <a href="https://youtu.be/watch?v=CeFAD5FfNyY" target="_blank"><button>Ver Vídeo Demonstrativo</button></a>
         </div>
       </div>
 
@@ -247,7 +247,7 @@
             <img src="assets/loja2.png" alt="loja2" />
           </div>
           <br>
-          <a href="https://youtu.be/SEUVIDEO" target="_blank"><button>Ver Vídeo Demonstrativo</button></a>
+          <a href="https://youtu.be/watch?v=KIG2ReYEoyQ" target="_blank"><button>Ver Vídeo Demonstrativo</button></a>
         </div>
       </div>
 
@@ -263,7 +263,7 @@
             <img src="assets/som2.png" alt="som2" />
           </div>
           <br>
-          <a href="https://youtu.be/SEUVIDEO" target="_blank"><button>Ver Vídeo Demonstrativo</button></a>
+          <a href="https://youtu.be/watch?v=EMaceRMRBVA" target="_blank"><button>Ver Vídeo Demonstrativo</button></a>
         </div>
       </div>
 
@@ -279,7 +279,7 @@
             <img src="assets/suporte2.png" alt="suporte2" />
           </div>
           <br>
-          <a href="https://youtu.be/SEUVIDEO" target="_blank"><button>Ver Vídeo Demonstrativo</button></a>
+          <a href="https://youtu.be/watch?v=yUh3vIeEofo" target="_blank"><button>Ver Vídeo Demonstrativo</button></a>
         </div>
       </div>
 
