--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@
   <section id="contato" class="contact">
     <h3>Entre em Contato</h3>
     <a href="https://discord.com/users/526240767015124992" target="_blank" rel="noopener">Me chame no Discord</a>
-    <a href="mailto:guilhermesantananj@gmail.com">Enviar E-mail</a>
+    <a href="mailto:gui.devpython@gmail.com">Enviar E-mail</a>
   </section>
 
   <footer>
