--- a/index.html
+++ b/index.html
@@ -480,13 +480,13 @@
               </div>
             </a>
 
-            <a href="mailto:gui.devpython@gmail.com" class="contact-link email">
+            <a href="mailto:contato@guidevbot.com.br" class="contact-link email">
               <div class="contact-link-icon">
                 <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M4 4h16c1.1 0 2 .9 2 2v12c0 1.1-.9 2-2 2H4c-1.1 0-2-.9-2-2V6c0-1.1.9-2 2-2z"/><polyline points="22,6 12,13 2,6"/></svg>
               </div>
               <div class="contact-link-text">
                 <span class="link-label">Email</span>
-                <span class="link-value">gui.devpython@gmail.com</span>
+                <span class="link-value">contato@guidevbot.com.br</span>
               </div>
             </a>
           </div>
