--- a/index.html
+++ b/index.html
@@ -500,13 +500,18 @@
             
             <div class="form-group">
               <label for="name">Seu Nome</label>
-              <input type="text" id="name" name="name" placeholder="Jhon Santos" required />
+              <input type="text" id="name" name="name" placeholder="João Santos" required />
               <span class="form-error" id="name-error"></span>
             </div>
             <div class="form-group">
               <label for="email">Endereço de Email</label>
-              <input type="email" id="email" name="email" placeholder="jhon@email.com" required />
+              <input type="email" id="email" name="email" placeholder="joao@email.com" required />
               <span class="form-error" id="email-error"></span>
+            </div>
+            <div class="form-group">
+              <label for="phone">Telefone</label>
+              <input type="tel" id="phone" name="phone" placeholder="(99) 99999-9999" required />
+              <span class="form-error" id="phone-error"></span>
             </div>
             
             <div class="form-group">
